# svelte5_intro

./: .gitignore  FIND  MEMO  du.sh
AxumTodo/: README.md
fast-api-sveltekit/: MEMO
fiber_air_sveltekit/: .gitignore  MEMO  main.go  package-lock.json
go-app/: MEMO  docker-compose.yml
go-embed-spa/: .MEMO.swp  .gitignore  Dockerfile  MEMO
go-sveltekil/: MEMO  main.go
go-sveltekil2/: .gitignore  MEMO  development.go  release.go.org
go-sveltekil2-Fiber/: ACTIONS  MEMO  development.go  go.mod  go.sum  main.go  main.go.ok  main.go.ok2  release.go  release.go.old
golang-sveltekit-template/: MEMO
grpc_sveltekit/: MEMO
kit5-data-load/: MEMO  package.json
kit_build/: _start_lighttpd.sh  package.json
kit_build_node/: MEMO  package-lock.json  svelte.config.js
kit_build_static/: MEMO  _start_lighttpd.sh  package.json  (+1 more)
rust-sns-practice/: Cargo.toml  MEMO  README.md  docker-compose.yaml
rust-sns-practice/docker/postgres/init/: init.sql
rust-sns-practice/docker/rust/: Dockerfile
rust-sns-practice/front/: package.json  vite.config.ts
rust-sns-practice/front/src/lib/: authcheck.ts  env.ts
rust-sns-practice/front/src/routes/: +page.svelte
rust-sns-practice/front/src/routes/dashboard/: +layout.server.ts  +page.svelte
rust-sns-practice/front/src/routes/login/: +page.svelte
rust-sns-practice/front/src/routes/register/: +page.svelte
rust-sns-practice/migrations/: 20230519043109_schema.sql
rust-sns-practice/src/: main.rs  router.rs
rust-sns-practice/src/models/: follow_relations.rs  mod.rs  prelude.rs  sessions.rs  user_tweets.rs  users.rs
(+137 files in other folders)
